added test files

--- a/HashTable/CMakeLists.txt
+++ b/HashTable/CMakeLists.txt
@@ -7,6 +7,10 @@ set(CMAKE_CXX_FLAGS "-std=c++11")
 
 add_executable(test-HashChain HashChain.cpp)
 add_executable(test-HashOpen HashOpen.cpp)
+add_executable(test-ChainFind ChainTestFind.cpp)
+add_executable(test-OpenFind OpenTestFind.cpp)
+add_executable(test-ChainInsert ChainTestInsert.cpp)
+add_executable(test-OpenInsert OpenTestInsert.cpp)
 #add_executable(test-vector-binary vector-binary.cpp)
 #add_executable(test-vector-sort vector-sort.cpp)
 macro(add_printout)
